# Graphics-Test-2

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  run.sh
src/: main.cpp
src/include/: camera.h  mesh.h  model.h  object.h  shader.h  stringUtils.h  utils.h
src/lib/: fragment.glsl  vertex.glsl
src/tests/environments/randomModels/: objects.h  world.h
src/tests/models/nanosuit/: nanosuit.mtl
tests/environments/randomModels/: objects.h  world.h
tests/models/atrium/: sponza.mtl
